# aether

./: Cargo.toml  README.md  ROADMAP.md
.cursor/agents/: abi-determinism-contract.md  aether-guest-integration.md  aether-phases-roadmap.md
contracts/attestation-verifier/: Cargo.toml
contracts/attestation-verifier/src/: error.rs  lib.rs  msg.rs
contracts/job-queue/: Cargo.toml
contracts/job-queue/src/: error.rs  lib.rs  msg.rs  state.rs
contracts/slashing-registry/: Cargo.toml
contracts/slashing-registry/src/: error.rs  lib.rs  msg.rs  state.rs
crates/aether-attest/: Cargo.toml
crates/aether-attest/src/: attestation.rs  lib.rs  verifier.rs
crates/aether-backtester/: Cargo.toml
crates/aether-backtester/src/: engine.rs  engine_tests.rs  lib.rs  metrics.rs
crates/aether-backtester/src/application/: generate_report.rs  mod.rs  optimize_parameters.rs  run_backtest.rs
crates/aether-backtester/src/domain/: mod.rs  position.rs  simulation_state.rs  strategy.rs  trade.rs
crates/aether-cli/: Cargo.toml
crates/aether-cli/src/: main.rs
crates/aether-cli/src/commands/: backtest.rs  mod.rs  verify_agentscript.rs  verify_wasm.rs
crates/aether-common/: Cargo.toml
crates/aether-common/src/: errors.rs  guest_abi.rs  lib.rs  types.rs
crates/aether-common/src/traits/: attester.rs  backtest_engine.rs  deterministic_engine.rs  job_handler.rs  market_data_provider.rs  mod.rs
crates/aether-common/src/utils/: crypto.rs  mod.rs  serialization.rs  time.rs
crates/aether-mwvm/: Cargo.toml
crates/aether-mwvm/src/: aether_guest_stubs.rs  bar_series_host.rs  lib.rs
crates/aether-mwvm/tests/: smoke.rs  strategy_guest_smoke.rs
crates/aether-mwvm/tests/fixtures/: README.md  minimal_agent.wat  tiny_indicator.pine  tiny_strategy_guest.wasm
crates/aether-node/: Cargo.toml
crates/aether-node/src/: config.rs  job_handler.rs  main.rs
crates/aether-node/src/p2p/: claiming.rs  discovery.rs  mod.rs
crates/aether-oracle/: Cargo.toml
crates/aether-oracle/src/: lib.rs  provider.rs
crates/aether-tee-runner/: Cargo.toml
crates/aether-tee-runner/src/: lib.rs  runner.rs  sandbox.rs
crates/aether-tee-runner/src/enclave/: mod.rs  sev.rs  tdx.rs
crates/aether-tee-runner/tests/: guest_wasm_runner.rs  sandbox_validate.rs
docs/: agentscript-guest-abi.md  compiler-aether-todo-list.md  compiler-integration-gap.md  data-back.md  stack-orchestration.md
ohlcv-router/: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
ohlcv-router/examples/: basic_fetch.py  multi_provider.py
ohlcv-router/src/ohlcv_router/: __init__.py  cache.py  cli.py  models.py  registry.py
ohlcv-router/src/ohlcv_router/providers/: __init__.py  base.py  binance.py  coingecko.py  finnhub.py  kraken.py  kucoin.py  tiingo.py  yfinance.py
ohlcv-router/tests/: test_binance.py  test_cache.py  test_cli.py  test_coingecko.py  test_finnhub.py  test_kraken.py  test_kucoin.py  test_registry.py  test_tiingo.py  test_yfinance.py
scripts/: demo-backtest.sh
