[package]
name = "aether-backtester"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Domain and application layer for deterministic trading backtests"

[dependencies]
aether-common = { path = "../aether-common" }
rust_decimal = { version = "1.36", features = ["serde", "maths"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
aether-oracle = { path = "../aether-oracle" }
