[package]
name = "aether-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Developer CLI: local backtest without full node"

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
aether-backtester = { path = "../aether-backtester" }
aether-common = { path = "../aether-common" }
aether-oracle = { path = "../aether-oracle" }
aether-tee-runner = { path = "../aether-tee-runner" }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
