[package]
name = "aether-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, errors, and traits for Aether (MWVM-BacktestNet compute layer)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
